--- a/index.html
+++ b/index.html
@@ -25,50 +25,11 @@
         radial-gradient(1200px 800px at 10% -10%, #0c1325 0%, #06080f 60%, #05070d 100%),
         linear-gradient(120deg, var(--bg-1), var(--bg-2));
       font-family:'Exo 2',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
-      overflow:hidden; /* prevent accidental scroll jump */
-      cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'><path d='M3 3 L23 12 L15 15 L21 28 L16.5 29.5 L10 17 L3 20 Z' fill='%2300b7ff'/><path d='M3 3 L23 12 L15 15' stroke='%23c9f1ff' stroke-width='1.1'/></svg>") 0 0, auto; /* visible, precise */
-    }
-
-    .wrap{max-width:var(--maxw);margin:0 auto;padding:36px 32px 24px;width:100%;opacity:0;transform:translateY(26px);filter:blur(8px);transition:opacity .9s ease,transform .9s ease,filter .9s ease}
-    .app-ready .wrap{opacity:1;transform:none;filter:blur(0)}
-
-    /* HEADER */
-    header{display:flex;align-items:center;gap:18px;padding:18px 0 24px;border-bottom:1px solid var(--line)}
-    .logo img{width:96px;height:auto;border-radius:20px;box-shadow:0 10px 24px rgba(17,177,255,.24)}
-    .brand{display:flex;align-items:center;gap:16px}
-    .brand .title{display:flex;flex-direction:column;gap:4px}
-    .brand h1{font-family:'Orbitron',sans-serif;font-weight:700;font-size:26px;letter-spacing:.9px;background:linear-gradient(90deg,var(--accent),var(--accent2));-webkit-background-clip:text;color:transparent}
-    .brand p{color:var(--muted);font-size:14px}
-
-    /* ELECTRIC intro for brand */
-    .brand.electric h1,.brand.electric p{animation:crtFlicker .9s steps(18,end) 1 both}
-    .brand.electric .logo img{animation:crtPulse .6s ease-out 1 both}
-    @keyframes crtPulse{0%{filter:brightness(.7)}40%{filter:brightness(1.35) drop-shadow(0 0 22px rgba(17,177,255,.45))}100%{filter:brightness(1) drop-shadow(0 0 10px rgba(17,177,255,.2))}}
-    @keyframes crtFlicker{0%,8%{opacity:.2; text-shadow:0 0 10px rgba(17,177,255,.7)} 20%{opacity:1} 35%{opacity:.35} 55%{opacity:1} 100%{opacity:1; text-shadow:0 0 12px rgba(17,177,255,.2)}}
-
-    /* MAIN GRID */
-    main{display:grid;grid-template-columns:1.15fr .85fr;align-items:center;gap:54px;min-height:74vh}
-    .content{display:flex;flex-direction:column;justify-content:center}
-
-    h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:56px;line-height:1.06;margin:0 0 16px;background:linear-gradient(90deg,var(--accent),#7dd3fc);-webkit-background-clip:text;color:transparent}
-    p.lead{color:#cfe0ff;line-height:1.68;margin:0 0 18px;font-size:1.12rem}
-
-    /* Custom bullets */
-    ul{list-style:none;margin:0 0 22px 0}
-    li{position:relative;padding-left:28px;margin:8px 0;font-weight:600}
-    li::before{content:"";position:absolute;left:0;top:.55em;width:16px;height:10px;border-left:3px solid #00b7ff;border-top:3px solid #00b7ff;transform:skewX(-18deg) rotate(-45deg);filter:drop-shadow(0 0 6px rgba(17,177,255,.5))}
-
-    .cta-row{display:flex;align-items:center;gap:16px;flex-wrap:wrap;margin-top:12px}
-    .apply-btn{display:inline-flex;align-items:center;gap:10px;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:14px 36px;border-radius:14px;font-weight:800;letter-spacing:.6px;box-shadow:0 12px 28px rgba(17,177,255,.28);font-family:'Orbitron',sans-serif;border:0;cursor:not-allowed}
-    .note{font-size:13px;color:var(--muted)}
-
-    /* TERMS CARD — tight glow only around box (no column bleed) */
+      overflow:hidden; /* prevent accidental scroll */
+      cursor:none; /* we render our own cursor */
+    /* TERMS CARD — localized glow */
     .terms{position:relative}
-    .card{position:relative;background:linear-gradient(180deg,#0e1322,#0d1220);border:1px solid var(--line);border-radius:20px;padding:24px;box-shadow:
-      0 22px 48px rgba(0,0,0,.32), /* depth */
-      0 0 0 1px rgba(255,255,255,.05) inset,
-      0 0 28px rgba(17,177,255,.18); /* localized glow */
-    }
+    .card{position:relative;background:linear-gradient(180deg,#0e1322,#0d1220);border:1px solid var(--line);border-radius:20px;padding:24px;box-shadow:0 22px 48px rgba(0,0,0,.32),0 0 0 1px rgba(255,255,255,.05) inset,0 0 28px rgba(17,177,255,.18)}
     .card h3{color:#a8dfff;font-size:1.2rem;margin-bottom:10px;border-bottom:1px solid rgba(53,198,255,.18);padding-bottom:8px}
     .row{display:grid;grid-template-columns:auto 1fr;gap:10px 14px;align-items:center;margin:10px 0}
     .label{color:var(--muted);font-size:14px}
@@ -85,89 +46,84 @@
     .splash.is-fading{animation:fade .8s ease forwards}
     @keyframes fade{to{opacity:0;visibility:hidden}}
 
-    /* Cursor halo (kept, but real cursor visible) */
-    .cursor-halo{position:fixed;left:0;top:0;width:120px;height:120px;border-radius:50%;pointer-events:none;z-index:9998;background:radial-gradient(circle,rgba(17,177,255,.35)0%,rgba(17,177,255,.12)45%,transparent 70%);filter:blur(14px);mix-blend-mode:screen;transform:translate(-50%,-50%)}
+    /* FUTURISTIC CURSOR (DOM‑rendered) */
+    .cursor{position:fixed;left:0;top:0;z-index:10000;pointer-events:none;transform:translate(-50%,-50%)}
+    .cursor svg{display:block;filter:drop-shadow(0 0 12px rgba(17,177,255,.6))}
+    .cursor .spark{opacity:.0}
+    .cursor.is-active .spark{animation:flare .25s ease}
+    @keyframes flare{from{opacity:0}50%{opacity:.9}to{opacity:0}}
 
-    /* RESPONSIVE */
     @media (max-width:1200px){h2{font-size:48px} main{grid-template-columns:1fr} .terms{justify-self:stretch}}
     @media (max-width:540px){h2{font-size:34px}.apply-btn{width:100%;justify-content:center}}
+    @media (pointer:coarse){body{cursor:auto}.cursor{display:none}}
   </style></head>
 <body>
-  <!-- Cursor halo -->
-  <div class="cursor-halo" id="cursorHalo" aria-hidden="true"></div> <!-- Splash --> <div class="splash" id="splash" aria-hidden="true">
-    <img class="splash__logo" src="assets/logo.png" alt="F1 Cash logo">
-  </div> <div class="wrap" id="app">
-    <header>
-      <div class="brand" id="brand">
-        <div class="logo"><img src="assets/logo.png" alt="F1 Cash logo"></div>
-        <div class="title">
-          <h1>F1 CASH</h1>
-          <p>Simple Business Funding</p>
-        </div>
-      </div>
-    </header><main>
-  <section class="content">
-    <h2>Fast working capital for small businesses</h2>
-    <p class="lead">Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
-    <ul id="typing-list">
-      <li>Business owners with 12+ months in operation</li>
-      <li>Simple promissory note after verification</li>
-      <li>6 equal monthly installments</li>
-    </ul>
-    <div class="cta-row">
-      <button class="apply-btn" disabled title="Coming soon">🚀 APPLY NOW</button>
-      <p class="note">Button disabled for now — application link coming soon.</p>
-    </div>
-  </section>
-
-  <aside class="terms">
-    <div class="card" aria-label="At-a-glance terms">
-      <h3>At-a-glance terms</h3>
-      <div class="row"><span class="label">Typical advance</span><span class="value">$300 – $1,000</span></div>
-      <div class="row"><span class="label">Schedule</span><span class="value">6 monthly payments</span></div>
-      <div class="row"><span class="label">Support</span><span class="value"><a href="mailto:info@f1cash.net">info@f1cash.net</a></span></div>
-      <div class="row"><span class="label">Phone</span><span class="value"><a href="tel:+12294484389">+1 229-448-4389</a></span></div>
-    </div>
-  </aside>
-</main>
-
-  </div> <footer>
-    <span>© <span id="year">2025</span> F1 Cash</span>
-    <span><a href="mailto:info@f1cash.net">info@f1cash.net</a> · <a href="tel:+12294484389">+1 229-448-4389</a></span>
-  </footer> <script>
+  <!-- Futuristic cursor (DOM element) -->
+  <div class="cursor" id="cursor" aria-hidden="true">
+    <!-- Neon pointer with halo + spark -->
+    <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
+      <defs>
+        <radialGradient id="halo" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(6 6) rotate(45) scale(18)">
+          <stop stop-color="#6ee7ff" stop-opacity=".55"/>
+          <stop offset=".5" stop-color="#11b1ff" stop-opacity=".18"/>
+          <stop offset="1" stop-color="#11b1ff" stop-opacity="0"/>
+        </radialGradient>
+      </defs>
+      <circle cx="6" cy="6" r="12" fill="url(#halo)"/>
+      <path d="M2 2 L26 12 L16 15 L22 34 L16.5 36 L10 18 L2 22 Z" fill="#00b7ff"/>
+      <path d="M2 2 L26 12 L16 15" stroke="#d8f6ff" stroke-width="1.2"/>
+      <circle class="spark" cx="26" cy="12" r="3" fill="#6ee7ff"/>
+    </svg>
+    // Ultra-robust splash -> reveal, cursor, and typing
     (function(){
       const splash = document.getElementById('splash');
-      const halo = document.getElementById('cursorHalo');
       const brand = document.getElementById('brand');
+      const cursor = document.getElementById('cursor');
 
-      // Splash → reveal sequence
-      function reveal(){
+      function forceReveal(){
+        if (document.body.classList.contains('app-ready')) return;
+        if (splash) splash.style.display = 'none';
         document.body.classList.add('app-ready');
-        // run electric brand intro once
-        brand.classList.add('electric');
-        setTimeout(()=>brand.classList.remove('electric'), 1200);
+        if (brand){
+          brand.classList.add('electric');
+          setTimeout(()=>brand.classList.remove('electric'), 1200);
+        }
+        startTyping();
       }
-      function fadeOutSplash(){
+
+      function start(){
+        if (!splash){ forceReveal(); return; }
         splash.classList.add('is-fading');
-        splash.addEventListener('animationend', ()=>{ splash.style.display='none'; reveal(); }, {once:true});
+        // Hard fallback even if animationend never fires
+        const failSafe = setTimeout(forceReveal, 1400);
+        splash.addEventListener('animationend', ()=>{ clearTimeout(failSafe); forceReveal(); }, {once:true});
       }
-      setTimeout(fadeOutSplash, 900);
 
-      // Cursor halo follow (keep real cursor visible)
-      let tx=window.innerWidth/2, ty=window.innerHeight/2, x=tx, y=ty;
-      function tick(){ x += (tx-x)*0.2; y += (ty-y)*0.2; halo.style.transform = `translate(${x}px,${y}px)`; requestAnimationFrame(tick); }
-      tick();
-      window.addEventListener('mousemove', (e)=>{ tx=e.clientX; ty=e.clientY; }, {passive:true});
+      // Start as soon as DOM is ready; don't wait for all assets
+      document.addEventListener('DOMContentLoaded', ()=> setTimeout(start, 300));
+      // Second failsafe: force reveal regardless
+      setTimeout(forceReveal, 3200);
 
-      // Typewriter bullets
-      const list = document.getElementById('typing-list');
-      const items = Array.from(list.querySelectorAll('li'));
-      items.forEach(li=>{ li.dataset.full = li.textContent.trim(); li.textContent=''; li.style.opacity=0; });
-      let i=0; function typeNext(){ if(i>=items.length) return; const el=items[i]; const txt=el.dataset.full; el.style.opacity=1; let k=0; (function step(){ if(k<=txt.length){ el.textContent=txt.slice(0,k++); setTimeout(step,14);} else { i++; setTimeout(typeNext,160);} })(); }
-      setTimeout(typeNext, 1100);
+      /* ===== Futuristic cursor follow ===== */
+      if (cursor){
+        let tx=window.innerWidth/2, ty=window.innerHeight/2, x=tx, y=ty, activeTimeout;
+        function loop(){ x += (tx-x)*0.18; y += (ty-y)*0.18; cursor.style.left=x+'px'; cursor.style.top=y+'px'; requestAnimationFrame(loop); }
+        loop();
+        window.addEventListener('mousemove', (e)=>{ tx=e.clientX; ty=e.clientY; cursor.classList.add('is-active'); clearTimeout(activeTimeout); activeTimeout=setTimeout(()=>cursor.classList.remove('is-active'), 120); }, {passive:true});
+      }
+
+      /* ===== Typewriter bullets ===== */
+      function startTyping(){
+        const list = document.getElementById('typing-list');
+        if(!list) return;
+        const items = Array.from(list.querySelectorAll('li'));
+        items.forEach(li=>{ li.dataset.full=li.textContent.trim(); li.textContent=''; li.style.opacity=0; });
+        let i=0; function typeNext(){ if(i>=items.length) return; const el=items[i]; const txt=el.dataset.full; el.style.opacity=1; let k=0; (function step(){ if(k<=txt.length){ el.textContent=txt.slice(0,k++); setTimeout(step,14);} else { i++; setTimeout(typeNext,160);} })(); }
+        setTimeout(typeNext, 200);
+      }
 
       // Footer year
-      const y=document.getElementById('year'); if(y) y.textContent = new Date().getFullYear();
+      const y=document.getElementById('year'); if(y) y.textContent=new Date().getFullYear();
     })();
   </script></body>
 </html>
